--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,11 +52,15 @@ jobs:
           security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
 
-          # import Apple certificates
+          # download Apple certificates
           curl https://www.apple.com/appleca/AppleIncRootCertificate.cer -L --output AppleIncRootCertificate.cer
           curl https://www.apple.com/certificateauthority/AppleComputerRootCertificate.cer -L --output AppleComputerRootCertificate.cer
           curl http://developer.apple.com/certificationauthority/AppleWWDRCA.cer -L --output AppleWWDRCA.cer
-
+          
+          # install Apple certificates
+          # the following line is required for macOS 11+, see
+          # https://developer.apple.com/forums/thread/671582?answerId=693632022#693632022
+          sudo security authorizationdb write com.apple.trust-settings.admin allow
           sudo security add-trusted-cert -d -r trustRoot -k $KEYCHAIN_PATH ./AppleIncRootCertificate.cer
           sudo security add-trusted-cert -d -r trustRoot -k $KEYCHAIN_PATH ./AppleComputerRootCertificate.cer
           security add-certificates -k $KEYCHAIN_PATH ./AppleWWDRCA.cer
