--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -34,7 +34,7 @@ installer_filename: MNE-Python-1.0.0_0-Linux.sh         # [linux]
 installer_type: pkg                     # [osx]
 signing_identity_name: 9779L28NP8       # [osx]  Used for productsign
 notarization_identity_name: 9779L28NP8  # [osx]  Used for codesign
-reverse_domain_identifier: tools.mne    # [osx]  Used for productbuild: --identifier $reverse_domain_identifier.$name
+reverse_domain_identifier: tools.mne    # [osx]  Used for productbuild --identifier $reverse_domain_identifier.$name
 
 # Only create menus for mne-installer-menus
 menu_packages:
