--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,66 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      # Based on https://docs.github.com/en/actions/deployment/deploying-xcode-applications/installing-an-apple-certificate-on-macos-runners-for-xcode-development
+      - name: Install code-signing certificates (macOS)
+        if: ${{ runner.os == 'macOS' }}
+        env:
+          APPLICATION_CERT_BASE64: ${{ secrets.APPLE_APPLICATION_CERT_BASE64 }}
+          APPLICATION_CERT_PASSWORD: ${{ secrets.APPLE_APPLICATION_CERT_PASSWORD }}
+          INSTALLER_CERT_BASE64: ${{ secrets.APPLE_INSTALLER_CERT_BASE64 }}
+          INSTALLER_CERT_PASSWORD: ${{ secrets.APPLE_INSTALLER_CERT_PASSWORD }}
+          KEYCHAIN_PASSWORD: ${{ secrets.APPLE_KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          APPLICATION_CERT_PATH=$RUNNER_TEMP/application_cert.p12
+          INSTALLER_CERT_PATH=$RUNNER_TEMP/installer_cert.p12
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+
+          # import certificatefrom secrets
+          echo -n "$APPLICATION_CERT_BASE64" | base64 --decode --output $APPLICATION_CERT_PATH
+          echo -n "$INSTALLER_CERT_BASE64" | base64 --decode --output $INSTALLER_CERT_PATH
+
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # download Apple certificates
+          curl https://www.apple.com/appleca/AppleIncRootCertificate.cer -L --output AppleIncRootCertificate.cer
+          curl https://www.apple.com/certificateauthority/AppleComputerRootCertificate.cer -L --output AppleComputerRootCertificate.cer
+          curl http://developer.apple.com/certificationauthority/AppleWWDRCA.cer -L --output AppleWWDRCA.cer
+          
+          # install Apple certificates
+          # the following line is required for macOS 11+, see
+          # https://developer.apple.com/forums/thread/671582?answerId=693632022#693632022
+          sudo security authorizationdb write com.apple.trust-settings.admin allow
+          sudo security add-trusted-cert -d -r trustRoot -k $KEYCHAIN_PATH ./AppleIncRootCertificate.cer
+          sudo security add-trusted-cert -d -r trustRoot -k $KEYCHAIN_PATH ./AppleComputerRootCertificate.cer
+          security add-certificates -k $KEYCHAIN_PATH ./AppleWWDRCA.cer
+
+          # ensure we're going to import the correct developer certificates into keychain
+          openssl pkcs12 -nokeys -passin pass:"$APPLICATION_CERT_PASSWORD" -in $APPLICATION_CERT_PATH | grep friendlyName
+          openssl pkcs12 -nokeys -passin pass:"$INSTALLER_CERT_PASSWORD" -in $INSTALLER_CERT_PATH | grep friendlyName
+
+          # import developer certificates
+          security import $APPLICATION_CERT_PATH -P "$APPLICATION_CERT_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security import $INSTALLER_CERT_PATH -P "$INSTALLER_CERT_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+
+          # ensure the imported certificates are valid
+          security find-identity -v $KEYCHAIN_PATH
+
+          # Avoid a password prompt; what this actually does is not properly
+          # documented; see https://github.com/fastlane/fastlane/issues/13564#issue-372273249
+          # and https://stackoverflow.com/a/40039594
+          # FIXME: Really needed?
+          security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # Make the keychain the default
+          security default-keychain -s $KEYCHAIN_PATH
+
+          # List available signing identities (for debugging purposes)
+          security find-identity
+
       - name: Install Micromamba
         uses: mamba-org/provision-with-micromamba@main
         with:
@@ -38,6 +98,36 @@ jobs:
         shell: bash -l {0}
         run: |
           constructor recipes/mne-python_1.0
+
+      - name: Check installer signature (macOS)
+        if: ${{ runner.os == 'macOS' }}
+        run: |
+          # Installer package
+          pkgutil --check-signature MNE-Python-1.0.0_0-macOS_Intel.pkg
+          # Now extract the package and check that the _conde.exe binary is
+          # properly signed as well
+          pkgutil --expand-full MNE-Python-1.0.0_0-macOS_Intel.pkg ./mne-extracted
+          codesign -vd ./mne-extracted/main.pkg/Payload/mne-python_1.0.0_0/_conda.exe
+          # Check entitlements of _conda.exe binary
+          codesign --display --entitlements - ./mne-extracted/main.pkg/Payload/mne-python_1.0.0_0/_conda.exe
+          rm -rf ./mne-extracted
+
+      - name: Notarize installer (macOS)
+        if: |
+          matrix.os == 'macOS-11'
+        env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+        run: |
+          # Notarize the installer
+          xcrun notarytool submit ./MNE-Python-1.0.0_0-macOS_Intel.pkg \
+              --wait \
+              --apple-id=$APPLE_ID \
+              --password=$APPLE_ID_PASSWORD \
+              --team-id=$APPLE_TEAM_ID
+          # Staple the notarization certificate onto it
+          xcrun stapler staple MNE-Python-1.0.0_0-macOS_Intel.pkg
 
       - name: Run installer (macOS)
         if: ${{ runner.os == 'macOS' }}
@@ -96,10 +186,11 @@ jobs:
       #     path: |
       #       MNE-Python-*.*
 
+
       - name: Release
         if: |
           github.ref_type == 'tag' &&
-          (matrix.os == 'ubuntu-18.04' || matrix.os == 'macOS-10.15' || matrix.os == 'windows-2019')
+          (matrix.os == 'ubuntu-18.04' || matrix.os == 'macOS-11' || matrix.os == 'windows-2019')
         uses: ncipollo/release-action@v1
         with:
           artifacts: "MNE-Python-*.*"
