--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -26,10 +26,15 @@ default_prefix_all_users: "%ALLUSERSPROFILE%\\mne-python\\1.0.0_0"  # [win]
 
 uninstall_name: MNE-Python ${VERSION} (Python ${PYVERSION})
 
-installer_type: pkg  # [osx]
 installer_filename: MNE-Python-1.0.0_0-macOS_Intel.pkg  # [osx]
 installer_filename: MNE-Python-1.0.0_0-Windows.exe      # [win]
 installer_filename: MNE-Python-1.0.0_0-Linux.sh         # [linux]
+
+# Create signed macOS .pkg installer
+installer_type: pkg                     # [osx]
+signing_identity_name: 9779L28NP8       # [osx]  Used for productsign
+notarization_identity_name: 9779L28NP8  # [osx]  Used for codesign
+reverse_domain_identifier: tools.mne    # [osx]  Used for productbuild --identifier $reverse_domain_identifier.$name
 
 # Only create menus for mne-installer-menus
 menu_packages:
