Add installer package checksums to build artifacts
Fixes #44

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -186,6 +186,15 @@ jobs:
       #     path: |
       #       MNE-Python-*.*
 
+      - name: Calculate SHA256 hash
+        shell: bash
+        run: |
+          - shopt -s nullglob  # Fail if the following pattern yields no results
+          - matches=(MNE-Python-*-macOS_Intel.pkg)
+          - installer_fname="${matches[0]}"
+          - hash_fname="${installer_fname}.sha256.txt"
+          - shasum -a 256 "$installer_fname" > "$hash_fname"
+          - cat "$hash_fname"
 
       - name: Release
         if: |
