--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -132,12 +132,12 @@ jobs:
       - name: Calculate SHA256 hash of installer package
         shell: bash
         run: |
-          - shopt -s nullglob  # Fail if the following pattern yields no results
-          - matches=(MNE-Python-*-*.*)
-          - installer_fname="${matches[0]}"
-          - hash_fname="${installer_fname}.sha256.txt"
-          - shasum -a 256 "$installer_fname" > "$hash_fname"
-          - cat "$hash_fname"
+          shopt -s nullglob  # Fail if the following pattern yields no results
+          matches=(MNE-Python-*-*.*)
+          installer_fname="${matches[0]}"
+          hash_fname="${installer_fname}.sha256.txt"
+          shasum -a 256 "$installer_fname" > "$hash_fname"
+          cat "$hash_fname"
 
       - name: Run installer (macOS)
         if: ${{ runner.os == 'macOS' }}
