--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,8 +129,8 @@ jobs:
           # Staple the notarization certificate onto it
           xcrun stapler staple MNE-Python-1.0.0_0-macOS_Intel.pkg
 
-      - name: Calculate SHA256 hash of installer package
-        shell: bash
+      - name: Calculate SHA256 hash of installer package (macOS & Linux)
+        if: ${{ runner.os == 'macOS' || runner.os == 'Linux'}}
         run: |
           shopt -s nullglob  # Fail if the following pattern yields no results
           matches=(MNE-Python-*-*.*)
@@ -138,6 +138,12 @@ jobs:
           hash_fname="${installer_fname}.sha256.txt"
           shasum -a 256 "$installer_fname" > "$hash_fname"
           cat "$hash_fname"
+
+      - name: Calculate SHA256 hash of installer package (Windows)
+        if: ${{ runner.os == 'Windows }}
+        run: |
+          Get-FileHash MNE-Python-1.0.0_0-Windows.exe -Algorithm SHA256 > MNE-Python-1.0.0_0-Windows.exe.sha256.txt
+          Get-Content MNE-Python-1.0.0_0-Windows.exe.sha256.txt
 
       - name: Run installer (macOS)
         if: ${{ runner.os == 'macOS' }}
