--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -188,14 +188,14 @@ jobs:
 
 
       - name: Export frozen environment definition (macOS)
-        if: {{ runner.os == 'macOS }}
+        if: ${{ runner.os == 'macOS }}
         run: |
           source ~/mne-python_1.0.0_0/bin/activate
           mamba list --json > MNE-Python-1.0.0_0-macOS_Intel.env.json
           cat MNE-Python-1.0.0_0-macOS_Intel.env.json
 
       - name: Export frozen environment definition (Linux)
-        if: {{ runner.os == 'Linux }}
+        if: ${{ runner.os == 'Linux }}
         run: |
           source ~/mne-python/1.0.0_0/bin/activate
           mamba list --json > MNE-Python-1.0.0_0-Linux.env.json
