More tests & comments

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -170,6 +170,8 @@ jobs:
           source /Applications/mne-python_1.0.0_0/bin/activate
           conda info
           mamba list
+          # Check that the installed Python is, in fact, an Intel binary
+          python -c "import platform; assert platform.machine() == 'x86_64'"
           # Check the CONDA_SUBDIR variable is set correctly
           mamba env config vars list
           python -c "import os; assert 'CONDA_SUBDIR' in os.environ; assert os.environ['CONDA_SUBDIR'] == 'osx-64'"
