--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,7 +152,7 @@ jobs:
           installer -verbose -pkginfo -pkg ./MNE-Python-1.0.0_0-macOS_Intel.pkg
           installer -verbose -dominfo -pkg ./MNE-Python-1.0.0_0-macOS_Intel.pkg
           installer -verbose -volinfo -pkg ./MNE-Python-1.0.0_0-macOS_Intel.pkg
-          sudo installer -verbose -pkg MNE-Python-1.0.0_0-macOS_Intel.pkg -target /
+          sudo installer -verbose -pkg MNE-Python-1.0.0_0-macOS_Intel.pkg -target /Applications
 
       - name: Run installer (Linux)
         if: ${{ runner.os == 'Linux' }}
