--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
   - conda-forge
 
 dependencies:
-  - constructor
-  - conda-standalone 
-  - menuinst
-  - conda
+  - constructor =3.3a=*_21
+  - conda-standalone =4.12a=*_9
+  - menuinst =2.0a=14_g594d642_*
+  - conda =4.12a=*_1
