--- a/environment.yml
+++ b/environment.yml
@@ -8,4 +8,4 @@ dependencies:
   - constructor =3.3a=*_21
   - conda-standalone =4.12a=*_9
   - menuinst =2.0a=14_g594d642_*
-  - conda =4.12a=*_1
+  - conda =4.12a
