--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,7 +98,7 @@ jobs:
         if: ${{ runner.os == 'macOS' }}
         shell: bash -l {0}
         run: |
-          patch $CONDA_PREFIX/lib/python3.9/site-packages/constructor/osxpkg.py ./patches/constructor_macOS.patch
+          patch $CONDA_PREFIX/lib/python3.9/site-packages/constructor/osxpkg.py ./assets/constructor_macOS.patch
 
       - name: Build installer
         shell: bash -l {0}
@@ -158,7 +158,11 @@ jobs:
           installer -verbose -pkginfo -pkg ./MNE-Python-1.0.0_0-macOS_Intel.pkg
           installer -verbose -dominfo -pkg ./MNE-Python-1.0.0_0-macOS_Intel.pkg
           installer -verbose -volinfo -pkg ./MNE-Python-1.0.0_0-macOS_Intel.pkg
-          sudo installer -verbose -pkg MNE-Python-1.0.0_0-macOS_Intel.pkg -target /
+          sudo installer \
+            -verbose \
+            -pkg MNE-Python-1.0.0_0-macOS_Intel.pkg \
+            -target / \
+            || tail -n 30 /var/log/install.log  # display last log messages on error
 
       - name: Run installer (Linux)
         if: ${{ runner.os == 'Linux' }}
