--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -1,12 +1,13 @@
 version: 1.0.0_0
 name: MNE-Python           # [not osx]
-# macOS .pkg installation target directory defaults to ~/$NAME, so let's
-# include the version number in this path
+# macOS .pkg installation target directory defaults to /Applications/$NAME,
+# so let's include the version number in this path
 name: MNE-Python_1.0.0_0  # [osx]
 
 company: MNE-Python Developers
 
-license_file: ../../assets/license.rtf
+license_file: ../../assets/license.txt         # [linux]
+license_file: ../../assets/license.rtf         # [not linux]
 welcome_image: ../../assets/welcome_macOS.png  # [osx]
 welcome_image: ../../assets/welcome.png        # [not osx]
 header_image: ../../assets/header.png
