--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -196,6 +196,9 @@ jobs:
           mamba env config vars list
           python -c "import os; assert 'CONDA_SUBDIR' in os.environ; assert os.environ['CONDA_SUBDIR'] == 'osx-64'"
 
+          # Check we have all .app bundles in /Applications
+          test `ls /Applications/MNE-Python*.app | wc -l` -eq 5
+
           # Finally, run MNE's sys_info
           mne sys_info
 
@@ -206,6 +209,16 @@ jobs:
           source ~/mne-python/1.0.0_0/bin/activate
           conda info
           mamba list
+
+          # Check that menu shortcuts were created …
+          test `ls /.local/share/applications/MNE-Python*.desktop | wc -l` -eq 5
+          # … and patched to work around a bug in menuinst
+          test `grep "Terminal=True" | wc -l` -eq 0
+          test `grep "Terminal=False" | wc -l` -eq 0
+          test `grep "Terminal=true" | wc -l` -ge 1
+          test `grep "Terminal=false" | wc -l` -ge 1
+
+          # Finally, run MNE's sys_info
           xvfb-run mne sys_info
 
       - name: Check installation (Windows)
