--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -211,7 +211,7 @@ jobs:
           mamba list
 
           # Check that menu shortcuts were created …
-          test `ls /.local/share/applications/MNE-Python*.desktop | wc -l` -eq 5
+          test `ls ~/.local/share/applications/MNE-Python*.desktop | wc -l` -eq 5
           # … and patched to work around a bug in menuinst
           test `grep "Terminal=True"  | wc -l` -eq 0
           test `grep "Terminal=False" | wc -l` -eq 0
