--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -211,12 +211,13 @@ jobs:
           mamba list
 
           # Check that menu shortcuts were created …
-          test `ls ~/.local/share/applications/MNE\ *.desktop | wc -l` -eq 5
+          cd ~/.local/share/applications
+          test `ls "MNE "*.desktop | wc -l` -eq 5
           # … and patched to work around a bug in menuinst
-          test `grep "Terminal=True"  | wc -l` -eq 0
-          test `grep "Terminal=False" | wc -l` -eq 0
-          test `grep "Terminal=true"  | wc -l` -ge 1
-          test `grep "Terminal=false" | wc -l` -ge 1
+          test `grep "Terminal=True"  "MNE "*.desktop | wc -l` -eq 0
+          test `grep "Terminal=False" "MNE "*.desktop | wc -l` -eq 0
+          test `grep "Terminal=true"  "MNE "*.desktop | wc -l` -ge 1
+          test `grep "Terminal=false" "MNE "*.desktop | wc -l` -ge 1
 
           # Finally, run MNE's sys_info
           xvfb-run mne sys_info
