--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -215,10 +215,10 @@ jobs:
           ls -l
           test `ls "MNE "*.desktop | wc -l` -eq 5
           # … and patched to work around a bug in menuinst
-          test `grep "Terminal=True"  "MNE "*.desktop | wc -l` -eq 0
-          test `grep "Terminal=False" "MNE "*.desktop | wc -l` -eq 0
-          test `grep "Terminal=true"  "MNE "*.desktop | wc -l` -ge 1
-          test `grep "Terminal=false" "MNE "*.desktop | wc -l` -ge 1
+          test `grep "Terminal=True"  MNE-Python*.desktop | wc -l` -eq 0
+          test `grep "Terminal=False" MNE-Python*.desktop | wc -l` -eq 0
+          test `grep "Terminal=true"  MNE-Python*.desktop | wc -l` -ge 1
+          test `grep "Terminal=false" MNE-Python*.desktop | wc -l` -ge 1
 
           # Finally, run MNE's sys_info
           xvfb-run mne sys_info
