--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -213,7 +213,7 @@ jobs:
           # Check that menu shortcuts were created …
           cd ~/.local/share/applications
           ls -l
-          test `ls "MNE "*.desktop | wc -l` -eq 5
+          test `ls MNE-Python*.desktop | wc -l` -eq 5
           # … and patched to work around a bug in menuinst
           test `grep "Terminal=True"  MNE-Python*.desktop | wc -l` -eq 0
           test `grep "Terminal=False" MNE-Python*.desktop | wc -l` -eq 0
