--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -213,10 +213,13 @@ jobs:
           # Check that menu shortcuts were created …
           cd ~/.local/share/applications
           ls -l
+          echo "Checking for existence of .desktop files"
           test `ls MNE-Python*.desktop | wc -l` -eq 5
           # … and patched to work around a bug in menuinst
+          echo "Checking that incorrect Terminal entries have been removed"
           test `grep "Terminal=True"  MNE-Python*.desktop | wc -l` -eq 0
           test `grep "Terminal=False" MNE-Python*.desktop | wc -l` -eq 0
+          echo "Checking that Terminal entries are correct"
           test `grep "Terminal=true"  MNE-Python*.desktop | wc -l` -ge 1
           test `grep "Terminal=false" MNE-Python*.desktop | wc -l` -ge 1
 
