--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -215,6 +215,7 @@ jobs:
           ls -l
           echo "Checking for existence of .desktop files"
           test `ls MNE-Python*.desktop | wc -l` -eq 5
+          cat MNE-Python*.desktop
           # … and patched to work around a bug in menuinst
           echo "Checking that incorrect Terminal entries have been removed"
           test `grep "Terminal=True"  MNE-Python*.desktop | wc -l` -eq 0
