--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -214,14 +214,14 @@ jobs:
           cd ~/.local/share/applications
           ls -l
           echo "Checking for existence of .desktop files"
-          test `ls MNE-Python*.desktop | wc -l` -eq 5 && echo "✅" || echo "❌"
+          test `ls MNE-Python*.desktop | wc -l` -eq 5
           # … and patched to work around a bug in menuinst
           echo "Checking that incorrect Terminal entries have been removed"
-          test `grep "Terminal=True"  MNE-Python*.desktop | wc -l` -eq 0 && echo "✅" || echo "❌"
-          test `grep "Terminal=False" MNE-Python*.desktop | wc -l` -eq 0 && echo "✅" || echo "❌"
+          test `grep "Terminal=True"  MNE-Python*.desktop | wc -l` -eq 0
+          test `grep "Terminal=False" MNE-Python*.desktop | wc -l` -eq 0
           echo "Checking that Terminal entries are correct…"
-          test `grep "Terminal=true"  MNE-Python*.desktop | wc -l` -ge 1 && echo "✅" || echo "❌"
-          test `grep "Terminal=false" MNE-Python*.desktop | wc -l` -ge 1 && echo "✅" || echo "❌"
+          test `grep "Terminal=true"  MNE-Python*.desktop | wc -l` -ge 1
+          test `grep "Terminal=false" MNE-Python*.desktop | wc -l` -ge 1
 
           # Finally, run MNE's sys_info
           xvfb-run mne sys_info
