--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -196,6 +196,9 @@ jobs:
           mamba env config vars list
           python -c "import os; assert 'CONDA_SUBDIR' in os.environ; assert os.environ['CONDA_SUBDIR'] == 'osx-64'"
 
+          # Check we have all .app bundles in /Applications
+          test `ls -d "/Applications/MNE "*.app | wc -l` -eq 5
+
           # Finally, run MNE's sys_info
           mne sys_info
 
@@ -206,6 +209,24 @@ jobs:
           source ~/mne-python/1.0.0_0/bin/activate
           conda info
           mamba list
+
+          # Check that menu shortcuts were created …
+          cd ~/.local/share/applications
+          ls -l
+          echo "Checking for existence of .desktop files"
+          test `ls MNE-Python*.desktop | wc -l` -eq 5
+          # … and patched to work around a bug in menuinst
+          echo "Checking that incorrect Terminal entries have been removed"
+          test `grep "Terminal=True"  MNE-Python*.desktop | wc -l` -eq 0
+          test `grep "Terminal=False" MNE-Python*.desktop | wc -l` -eq 0
+          echo "Checking that Terminal entries are correct…"
+          test `grep "Terminal=true"  MNE-Python*.desktop | wc -l` -ge 1
+          test `grep "Terminal=false" MNE-Python*.desktop | wc -l` -ge 1
+
+          # Display their contents
+          for f in MNE-Python*.desktop; do echo "📂 $f:"; cat "$f"; echo; done
+
+          # Finally, run MNE's sys_info
           xvfb-run mne sys_info
 
       - name: Check installation (Windows)
