--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,7 +104,7 @@ jobs:
         if: ${{ runner.os == 'Windows' }}
         shell: bash -l {0}
         run: |
-          patch $CONDA_PREFIX/lib/python3.9/site-packages/constructor/construct.py ./assets/constructor_windows.patch
+          C:\msys64\usr\bin\patch.exe %CONDA_PREFIX%\lib\python3.9\site-packages\constructor\construct.py .\assets\constructor_windows.patch
 
       - name: Build installer
         shell: bash -l {0}
