--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -96,9 +96,12 @@ specs:
   - bycycle
   - fooof
   # MNE-BIDS-Pipeline
+  # try to keep this in sync with https://github.com/mne-tools/mne-bids-pipeline/blob/main/requirements.txt
   - coloredlogs
   - json_tricks
   - fire
+  - dask
+  - distributed
   # OpenNeuro.org data access
   - openneuro-py
   # NeuroSpin needs the following
