--- a/recipes/mne-python_1.0/construct.yaml
+++ b/recipes/mne-python_1.0/construct.yaml
@@ -95,6 +95,16 @@ specs:
   - neurodsp
   - bycycle
   - fooof
+  # MNE-BIDS-Pipeline
+  # try to keep this in sync with https://github.com/mne-tools/mne-bids-pipeline/blob/main/requirements.txt
+  # note that many dependencies listed there are redundant and need not be explicitly listed here
+  - coloredlogs
+  - json_tricks
+  - fire
+  - dask
+  - distributed
+  # OpenNeuro.org data access
+  - openneuro-py
   # NeuroSpin needs the following
   - questionary
 
